--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   // Visit https://aka.ms/tsconfig to read more about this file
 
   "compilerOptions": {
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+
     // File Layout
     "rootDir": "./src",
     "outDir": "./dist",
@@ -10,7 +13,7 @@
     // See also https://aka.ms/tsconfig/module
     "module": "nodenext",
     "moduleResolution": "NodeNext",
-    "target": "esnext",
+    "target": "ES2020",
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
@@ -49,5 +52,6 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  }
+  },
+  "include": ["src"]
 }
